corrected some spacing in the paragraphs and edited the text a bit

--- a/css/module.css
+++ b/css/module.css
@@ -57,7 +57,7 @@ section {
 
 /* Container for Headshot and Title */
 .section-header {
-  margin: 15em 10em 17em 20%;
+  margin: 9em 10em 17em 15%;
 }
 
 /* Styling of Title "Paul Calabrese" */
